# email-triage-env

./: .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  data.py  environment.py  graders.py  main.py  models.py
static/: index.html
